--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -25,15 +25,49 @@
         </div>
     </nav>    
     <div id="cover-page">
+        <div class="container">
         <div id="cover-title">
             <h1><bold><center>Kayla Patterson</h1>
             <h2>STEP Intern</h2>
         </div>
+        </div>
     </div>
     <section id="about-me">
-        <h1> 
-            This is the About Section
-        </h1>
+        <div class="container">
+        <h1 id="about-title"><center> About Me</h1>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner"width="100" height="100">
+                    <div class="carousel-item active" >
+                    <img class="d-block w-100" src="images/slide1.jpg" alt="First slide" >
+                    </div>
+                    <div class="carousel-item">
+                    <img class="d-block w-100" src="images/slide2.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                    <img class="d-block w-100" src="images/slide3.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                    <img class="d-block w-100" src="images/slide4.jpg" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                    <img class="d-block w-100" src="images/slide5.jpg" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
     </section>
     <!--<div id="content">
       <h1>My Portfolio</h1>
