--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -32,15 +32,21 @@
         </div>
         </div>
     </div>
-    <section id="about-me">
+    <div="container-fluid" id="about">
+            <h1 class="about-title">About Me</h1>
+            <div class="about-text"><center>
+                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
+                    elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at. 
+                    Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Id eu nisl nunc mi ipsum faucibus vitae. Vel eros donec ac odio tempor 
+                    orci dapibus ultrices in. Nunc sed blandit libero volutpat sed. Elementum nibh tellus molestie nunc non blandit massa. Pellentesque 
+                    habitant morbi tristique senectus et netus et malesuada fames.            
+                </span>
+            </div>
+    </div>
+    <section id="about-carousel">
         <div class="container">
-        <h1 id="about-title"><center> About Me</h1>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
+            <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner"width="100" height="100">
                     <div class="carousel-item active" >
                     <img class="d-block w-100" src="images/slide1.jpg" alt="First slide" >
@@ -58,16 +64,19 @@
                     <img class="d-block w-100" src="images/slide5.jpg" alt="Third slide">
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
         </div>
+    </section>
+    <section id="projects">
+        <h1>Projects Section!</h1>
     </section>
     <!--<div id="content">
       <h1>My Portfolio</h1>
