Add footer with text.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,14 +27,14 @@
     <div id="cover-page">
         <div class="container">
         <div id="cover-title">
-            <h1><bold><center>Kayla Patterson</h1>
+            <h1><bold>Kayla Patterson</h1>
             <h2>STEP Intern</h2>
         </div>
         </div>
     </div>
     <div="container-fluid" id="about">
             <h1 class="about-title">About Me</h1>
-            <div class="about-text"><center>
+            <div class="about-text">
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
                     elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at. 
@@ -78,6 +78,10 @@
     <section id="projects">
         <h1>Projects Section!</h1>
     </section>
+    <footer>
+            <p>Website created by Kayla L. Patterson</p>
+    </footer>
+
     <!--<div id="content">
       <h1>My Portfolio</h1>
       <p>This is my portfolio.</p>
