Add pictures, project links, and text to the projects section.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -76,7 +76,52 @@
         </div>
     </section>
     <section id="projects">
-        <h1>Projects Section!</h1>
+        <h1 id="proj-title">Projects</h1>
+            <div class="container">
+                <section class="project-layout">
+                    <div>
+                        <h2>Engineering Practicum Intern Project</h2>
+                        <hs2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
+                                elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
+                        </hs2>
+                       
+                    </div>
+                    <img src="images/playstore.jpg" alt="project picture" width=300 height=250>
+                </section>
+                <section class="project-layout">
+                    <div>
+                        <h2>Capital One Website Application</h2>
+                        <hs2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
+                                elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
+                        </hs2>
+                        <a href="https://github.com/kpatterson01/CapitalOne-Web-Application" class="btn">See GitHub</a>
+                    </div>
+                    <img src="images/capital-one-website.jpg" alt="project picture" width=300 height=250>
+                </section>
+                <section class="project-layout">
+                    <div>
+                        <h2>Trash Cash Android App</h2>
+                        <hs2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
+                                elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
+                        </hs2>
+                    </div>
+                    <img src="images/trashcash.jpg" alt="project picture" width=300 height=250>
+                </section>
+                <section class="project-layout">
+                    <div>
+                        <h2>Nao Robot</h2>
+                        <hs2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
+                                elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
+                        </hs2>
+                        <a href="http://frc2590.org/members/kayla-patterson/" class="btn">Nemesis 2590</a>
+                    </div>
+                    <img src="images/nao-robot.jpg" alt="project picture" width=300 height=250>
+                </section>
+            </div>
     </section>
     <footer>
             <p>Website created by Kayla L. Patterson</p>
