--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -74,7 +74,12 @@
                 </a>
             </div>
         </div>
+       
     </section>
+    <div id="about-btn">
+      <button onclick="addRandomGreeting()" class="btn btn-primary">More About Me!</button>
+      <div id="more-container"></div>
+    </div>
     <section id="projects">
         <h1 id="proj-title">Projects</h1>
             <div class="container">
@@ -127,13 +132,7 @@
             <p>Website created by Kayla L. Patterson</p>
     </footer>
 
-    <!--<div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
-    </div>-->
+    
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
