Add interest layout with pictures and titles.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -32,7 +32,7 @@
         </div>
         </div>
     </div>
-    <div="container-fluid" id="about">
+    <div class="container-fluid" id="about">
             <h1 class="about-title">About Me</h1>
             <div class="about-text">
                 <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -74,15 +74,14 @@
                 </a>
             </div>
         </div>
-       
     </section>
     <div id="about-btn">
-      <button onclick="addRandomGreeting()" class="btn btn-primary">More About Me!</button>
+      <button onclick="addRandomFact()" class="btn btn-primary">More About Me!</button>
       <div id="more-container"></div>
     </div>
     <section id="projects">
+        <div class="container">
         <h1 id="proj-title">Projects</h1>
-            <div class="container">
                 <section class="project-layout">
                     <div>
                         <h2>Engineering Practicum Intern Project</h2>
@@ -92,7 +91,7 @@
                         </hs2>
                        
                     </div>
-                    <img src="images/playstore.jpg" alt="project picture" width=300 height=250>
+                    <img src="images/playstore.jpg" alt="Google Play Store Team" width=300 height=250>
                 </section>
                 <section class="project-layout">
                     <div>
@@ -103,7 +102,7 @@
                         </hs2>
                         <a href="https://github.com/kpatterson01/CapitalOne-Web-Application" class="btn">See GitHub</a>
                     </div>
-                    <img src="images/capital-one-website.jpg" alt="project picture" width=300 height=250>
+                    <img src="images/capital-one-website.jpg" alt="Capital One Website" width=300 height=250>
                 </section>
                 <section class="project-layout">
                     <div>
@@ -113,7 +112,7 @@
                                 elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
                         </hs2>
                     </div>
-                    <img src="images/trashcash.jpg" alt="project picture" width=300 height=250>
+                    <img src="images/trashcash.jpg" alt="TrashCash Android App" width=300 height=250>
                 </section>
                 <section class="project-layout">
                     <div>
@@ -124,10 +123,27 @@
                         </hs2>
                         <a href="http://frc2590.org/members/kayla-patterson/" class="btn">Nemesis 2590</a>
                     </div>
-                    <img src="images/nao-robot.jpg" alt="project picture" width=300 height=250>
+                    <img src="images/nao-robot.jpg" alt="Nao Robot" width=300 height=250>
                 </section>
             </div>
     </section>
+    <section id="interests">
+        <h1 id="int-title">Interests</h1>
+        <div class="row">
+            <div class="column">
+                <img src="images/interest-1.jpg" alt="Machine Learning" style="width:80%">
+                <h4>Machine Learning</h4>
+            </div>
+            <div class="column">
+                <img src="images/interest-2.jpg" alt="Artificial Intelligence" style="width:80%">
+                <h4>Artificial Intelligence</h4>
+            </div>
+            <div class="column">
+                <img src="images/interest-3.jpg" alt="Cybersecurity" style="width:80%">
+                <h4>Cybersecurity</h4>
+            </div>
+        </div>
+    </section> 
     <footer>
             <p>Website created by Kayla L. Patterson</p>
     </footer>
