Add contact information with url links.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -19,7 +19,6 @@
                 <a class="nav-item nav-link" href="#about">About Me</a>
                 <a class="nav-item nav-link" href="#projects">Projects</a>
                 <a class="nav-item nav-link" href="#interests">Interests</a>  
-                <a class="nav-item nav-link" href="#skills">Skills</a>  
                 <a class="nav-item nav-link" href="#contact">Contact Me</a>  
             </div>
         </div>
@@ -100,7 +99,7 @@
                                 Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
                                 elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
                         </hs2>
-                        <a href="https://github.com/kpatterson01/CapitalOne-Web-Application" class="btn">See GitHub</a>
+                        <a href="https://github.com/kpatterson01/CapitalOne-Web-Application" class="btn btn-danger">See GitHub</a>
                     </div>
                     <img src="images/capital-one-website.jpg" alt="Capital One Website" width=300 height=250>
                 </section>
@@ -121,7 +120,7 @@
                                 Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
                                 elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
                         </hs2>
-                        <a href="http://frc2590.org/members/kayla-patterson/" class="btn">Nemesis 2590</a>
+                        <a href="http://frc2590.org/members/kayla-patterson/" class="btn btn-danger">Nemesis 2590</a>
                     </div>
                     <img src="images/nao-robot.jpg" alt="Nao Robot" width=300 height=250>
                 </section>
@@ -144,8 +143,22 @@
             </div>
         </div>
     </section> 
+    <section id="contact">
+        <div id="contact-title">
+            <h1>Contact Me</h1>
+            <p>Thank you for visiting my website! Please feel free to connect with me, I am always looking for 
+                mentors, mentees, and people to network with.
+            </p>
+        </div>
+        <div class="container-fluid" id="buttons">
+            <a href="mailto:klypat00@gmail.com" class="btn btn-primary btn-lg">Email Me</a>
+            <a href="https://www.linkedin.com/in/kayla-patterson" class="btn btn-danger btn-lg">LinkedIn</a>
+            <a href="https://github.com/kpatterson01" class="btn btn-success btn-lg">Github</a>
+            <a href="https://drive.google.com/file/d/1HNqcNQGFQX4nzZWO-FFKlE-xT8NCLx03/view?usp=sharing" class="btn btn-warning btn-lg">Resume</a>
+        </div>
+    </section>
     <footer>
-            <p>Website created by Kayla L. Patterson</p>
+        <p>Website created by Kayla L. Patterson</p>
     </footer>
 
     
