--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -26,7 +26,7 @@
     <div id="cover-page">
         <div class="container">
         <div id="cover-title">
-            <h1><bold>Kayla Patterson</h1>
+            <h1 id="changeColor"><bold>Kayla Patterson</h1>
             <h2>STEP Intern</h2>
         </div>
         </div>
@@ -46,7 +46,7 @@
     <section id="about-carousel">
         <div class="container">
             <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner"width="100" height="100">
+                <div class="carousel-inner" width="100" height="100">
                     <div class="carousel-item active" >
                     <img class="d-block w-100" src="images/slide1.jpg" alt="First slide" >
                     </div>
