Replace placeholder text.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,12 +34,19 @@
     <div class="container-fluid" id="about">
             <h1 class="about-title">About Me</h1>
             <div class="about-text">
-                <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
-                    elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at. 
-                    Sed cras ornare arcu dui vivamus arcu felis bibendum ut. Id eu nisl nunc mi ipsum faucibus vitae. Vel eros donec ac odio tempor 
-                    orci dapibus ultrices in. Nunc sed blandit libero volutpat sed. Elementum nibh tellus molestie nunc non blandit massa. Pellentesque 
-                    habitant morbi tristique senectus et netus et malesuada fames.            
+                <span> My name is Kayla L. Patterson and I am a rising Junior from Hampton University.
+                    Throughout my six years of learning about the tech field, I have immersed myself 
+                    with top tech companies learning what it takes to become a Software Engineer. Ever 
+                    since I took my first Computer Science class in High School, I have fallen in love 
+                    with this field. I have been given opportunities to compete in different Hackathons, 
+                    intern at one of the top tech companies in the world, network with different professions 
+                    in tech, and attend prestigious conferences to learn about different tech roles at different 
+                    companies.<br> Computer Science is a huge part of who I am. Whether that is me coding my own 
+                    personal website, learning different Machine Learning Models, or even programming an AI robot. 
+                    Every topic dealing with code I have learned from inspiring people that have mentored me to 
+                    improve on my craft. Mentorship is a huge part of my life especially being in the tech field. 
+                    I have this passion to learn from not just my textbooks but people who inspire me every single 
+                    day to be where they are now.     
                 </span>
             </div>
     </div>
@@ -84,21 +91,26 @@
                 <section class="project-layout">
                     <div>
                         <h2>Engineering Practicum Intern Project</h2>
-                        <hs2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
-                                elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
+                        <hs2>Worked on the Google Play Store Team to create a tool to gain a better understanding 
+                            of the features for ML modles. This tool was able to display information for debugging 
+                            and explaining recommendations of different apps on the Play Store.The tool was also 
+                            used on my team to visually see different ML modles and their data in one collected 
+                            table. 
                         </hs2>
-                       
                     </div>
                     <img src="images/playstore.jpg" alt="Google Play Store Team" width=300 height=250>
                 </section>
                 <section class="project-layout">
                     <div>
                         <h2>Capital One Website Application</h2>
-                        <hs2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
-                                elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
+                        <hs2> Created a web application to competively get selected for the Capital One 2019 Software 
+                            Engineering Summit. This website was selected amongst 800 different applicants from top universities.
+                            The goal of this project was to create a web application that answers questions from bike 
+                            sharing data. I used Atom as my editor to create this website, and also the frameworks Bootstrap 
+                            and Jquery to display differnt effects on this website.One effect that I am really proud of is a 
+                            the parallex effect as well as changing the cursor to a bike.  
                         </hs2>
+                        <br>
                         <a href="https://github.com/kpatterson01/CapitalOne-Web-Application" class="btn btn-danger">See GitHub</a>
                     </div>
                     <img src="images/capital-one-website.jpg" alt="Capital One Website" width=300 height=250>
@@ -106,19 +118,26 @@
                 <section class="project-layout">
                     <div>
                         <h2>Trash Cash Android App</h2>
-                        <hs2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
-                                elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
+                        <hs2>During the Capital One Software Engineering Summit Hackathon my team and I created an 
+                            Android app called Trash Cash. The purpose of this app was to solve the issues of people
+                            not recycling. This app allows people to take a picture of an item that they are not sure is
+                            recyclable and then using the ML model Tensor flow, we were able to identify object that are recyclable
+                            and are not recyclable. Then once they take a photo of the recyclable item being thrown in the trash, money
+                            will go into their account for awarding themselves for recycling properly. 
                         </hs2>
+                        <br>
+                        <a href="https://docs.google.com/presentation/d/1O1aERmWyZ87R3n3_4VYoOlsBmxV4Knce13YClF2A6Yo/edit?usp=sharing" class="btn btn-danger">Presentation</a>
                     </div>
                     <img src="images/trashcash.jpg" alt="TrashCash Android App" width=300 height=250>
                 </section>
                 <section class="project-layout">
                     <div>
                         <h2>Nao Robot</h2>
-                        <hs2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Imperdiet nulla malesuada pellentesque elit eget. Pretium aenean pharetra magna ac placerat vestibulum lectus. Pellentesque 
-                                elit eget gravida cum sociis. Lacus vestibulum sed arcu non odio euismod lacinia at. Auctor eu augue ut lectus arcu bibendum at.  
+                       <hs2>Programmed a hummanoid robot on the Nemesis 2590 robotics team. The purpose of this project 
+                           was to program the robot to do interactive actions to interact with young students during our outreach 
+                           program. The Nao robot was programmed using Python and was able to calculate different math problems, dance,
+                           talk, and even throw a ball into a bucket. I worked on programming this robot for two years on my high school's 
+                           robotics team. 
                         </hs2>
                         <a href="http://frc2590.org/members/kayla-patterson/" class="btn btn-danger">Nemesis 2590</a>
                     </div>
@@ -132,14 +151,27 @@
             <div class="column">
                 <img src="images/interest-1.jpg" alt="Machine Learning" style="width:80%">
                 <h4>Machine Learning</h4>
+                <p>Being on the Google Play Store Team opened my eyes about Machine Learning. I truly am interested
+                    in this field and want to learn more about it. I have been studying Python more and studying different
+                    courses on Machine Learning using Coursera. 
+                </p>
             </div>
             <div class="column">
                 <img src="images/interest-2.jpg" alt="Artificial Intelligence" style="width:80%">
                 <h4>Artificial Intelligence</h4>
+                <p>This interest emerged during high school, where I selected to program a humanoid robot. I was very 
+                    excited because I have never programmed a robot before. Realizing the fun of programming them I have a 
+                    tremendous interest in learning more about them. 
+                </p>
             </div>
             <div class="column">
                 <img src="images/interest-3.jpg" alt="Cybersecurity" style="width:80%">
                 <h4>Cybersecurity</h4>
+                <p> Growing up I always wanted to protect people from fraud and identity theft 
+                    because that is something that no one should ever go through. Protecting people's 
+                    data is one of the things I am very passionate about, that is why I always
+                    make sure to focus on creating efficent code to not be acceptable to hackers.
+                </p>
             </div>
         </div>
     </section> 
